# example-python-mkdocs

./: README.md  mkdocs.yml  pyproject.toml
docs/: basic.md  basic_svg.md  draw.drawio  notebook.ipynb  theme.md
