[tool.poetry]
name = "example-python-mkdocs"
version = "0.1.0"
description = ""
authors = ["elsonjunio <elsonjuniog@gmail.com>"]
readme = "README.md"
packages = [{include = "example_python_mkdocs"}]

[tool.poetry.dependencies]
python = "^3.10"
mkdocs-jupyter = "^0.22.0"
matplotlib = "^3.6.1"


[tool.poetry.group.dev.dependencies]
mkdocs = "^1.4.1"
mkdocs-material = "^8.5.7"
pymdown-extensions = "^9.7"
ipykernel = "^6.16.1"
mkdocs-with-pdf = "^0.9.3"
mkdocs-drawio-exporter = "^0.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
